[gd_scene load_steps=16 format=3 uid="uid://bjd2d8ewc88jo"]

[ext_resource type="Script" path="res://scenes/ghost_customer.gd" id="1_18dcr"]
[ext_resource type="Texture2D" uid="uid://bd76olx88trgl" path="res://art/characters/Ghost_Customer/Ghost_Customer_Neutral.png" id="1_mq50i"]
[ext_resource type="Texture2D" uid="uid://4evkibdchmmn" path="res://art/characters/Ghost_Customer/Ghost_Customer_Satisfied.png" id="2_4i7ev"]
[ext_resource type="Texture2D" uid="uid://cnyjrsgh3f7x8" path="res://art/characters/Ghost_Customer/Ghost_Customer_Unsatisfied.png" id="3_d1g4w"]
[ext_resource type="PackedScene" uid="uid://mt8p7n8myi7y" path="res://dialogue/dialogue.tscn" id="5_g14yc"]
[ext_resource type="PackedScene" uid="uid://gs3a2ibhqla" path="res://dialogue/customer_order.tscn" id="6_mhk1x"]
[ext_resource type="PackedScene" uid="uid://bwdwgtimpn1hw" path="res://scenes/potion_1.tscn" id="7_g7xqj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_is1cb"]
atlas = ExtResource("1_mq50i")
region = Rect2(0, 0, 2250, 3000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckuvr"]
atlas = ExtResource("1_mq50i")
region = Rect2(0, 0, 2250, 3000)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmvam"]
atlas = ExtResource("2_4i7ev")
region = Rect2(0, 0, 2250, 3000)

[sub_resource type="AtlasTexture" id="AtlasTexture_qn0r1"]
atlas = ExtResource("1_mq50i")
region = Rect2(0, 0, 2250, 3000)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvboc"]
atlas = ExtResource("3_d1g4w")
region = Rect2(0, 0, 2250, 3000)

[sub_resource type="SpriteFrames" id="SpriteFrames_vpd8h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_is1cb")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckuvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmvam")
}],
"loop": true,
"name": &"Satisfied",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qn0r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvboc")
}],
"loop": true,
"name": &"Unsatisfied",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ws543"]
radius = 1185.44

[sub_resource type="CircleShape2D" id="CircleShape2D_gmpva"]
radius = 1295.0

[node name="Ghost_Customer" type="CharacterBody2D"]
position = Vector2(553, 400)
scale = Vector2(0.134281, 0.134281)
script = ExtResource("1_18dcr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vpd8h")
animation = &"Unsatisfied"
frame_progress = 0.998148

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-264, -192)
shape = SubResource("CircleShape2D_ws543")
one_way_collision_margin = 0.0

[node name="Chat_Detection_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chat_Detection_Area"]
position = Vector2(-249, -206)
shape = SubResource("CircleShape2D_gmpva")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Dialogue" parent="." instance=ExtResource("5_g14yc")]
metadata/_edit_use_anchors_ = true

[node name="Customer_Order" parent="." instance=ExtResource("6_mhk1x")]
metadata/_edit_use_anchors_ = true

[node name="Potion1" parent="." instance=ExtResource("7_g7xqj")]
position = Vector2(1680, -624)

[connection signal="body_entered" from="Chat_Detection_Area" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="Chat_Detection_Area" to="." method="_on_chat_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="Dialogue_Finished" from="Dialogue" to="." method="_on_dialogue_dialogue_finished"]
[connection signal="Order_Log_Closed" from="Customer_Order" to="." method="_on_customer_order_order_log_closed"]
